[package]
name = "armillary"
version = "0.50.0"
edition = "2021"

[dependencies]
glam = { version = "0.24.1", features = ["mint"] }
tokio = { version = "1.28.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
stardust-xr-fusion = "0.50.0"
stardust-xr-molecules = "0.50.0"
stardust-xr-asteroids = "0.50.0"

# [dependencies.stardust-xr-fusion]
# git = "https://github.com/StardustXR/core.git"
# branch = "dev"

# [dependencies.stardust-xr-molecules]
# git = "https://github.com/StardustXR/molecules.git"
# branch = "dev"

# [dependencies.stardust-xr-asteroids]
# git = "https://github.com/StardustXR/asteroids.git"
# branch = "dev"
