[package]
name = "armillary"
version = "0.50.0"
edition = "2021"

[dependencies]
glam = { version = "0.24.1", features = ["mint"] }
tokio = { version = "1.28.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.219", features = ["serde_derive"] }

[dependencies.stardust-xr-fusion]
version = "0.51.0"
git = "https://github.com/StardustXR/core.git"

[dependencies.stardust-xr-molecules]
version = "0.51.0"
git = "https://github.com/StardustXR/molecules.git"

[dependencies.stardust-xr-asteroids]
version = "0.51.0"
git = "https://github.com/StardustXR/asteroids.git"
